# sanic

./: CMakeLists.txt  Makefile  compile_commands.json
.cache/clangd/index/: common.h.E222C0E4E0DD0356.idx  environment.c.C58F8F6AC19DDB13.idx  environment.h.4DFC35F8F7E563F5.idx  main.c.D1F46C8AC7724142.idx  object.c.A07E5C8B977128C8.idx  object.h.5F36F9BBED345AC1.idx  player.c.9C1295D6CE907D9D.idx  player.h.C97706B6ABA88575.idx  raylib.h.686DAE8728992533.idx
include/: common.h  environment.h  object.h  player.h
src/: common.h  environment.c  environment.h  main.c  object.c  object.h  player.c  player.h
